--- a/index.html
+++ b/index.html
@@ -3,23 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile - Luminer</title>
+    <title>Page 1 - J-Luminary</title>
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="logo"><a href="../index.html">J-Luminary</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="profile/profile.html">Profile</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="page/profile/profile.html">Profile</a></li>
             </ul>
         </nav>
     </header>
+
+    <section class="profile-section">
+        <h2>Page 1 Content</h2>
+        <div class="profile-container">
+            <div class="profile-card">
+                <img src="/assets/profile1.jpg" alt="Profile 1">
+                <h3>Person 1</h3>
+                <p>Description for Person 1 in Page 1.</p>
+            </div>
+            <div class="profile-card">
+                <img src="/assets/profile2.jpg" alt="Profile 2">
+                <h3>Person 2</h3>
+                <p>Description for Person 2 in Page 1.</p>
+            </div>
+            <div class="profile-card">
+                <img src="/assets/profile3.jpg" alt="Profile 3">
+                <h3>Person 3</h3>
+                <p>Description for Person 3 in Page 1.</p>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <p>© 2024 Luminer. All rights reserved.</p>
+        <p>© 2024 J-Luminary. All rights reserved.</p>
     </footer>
 
     <script src="/assets/script.js"></script>
