--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1 - J-Luminary</title>
+    <title>Home - Luminary</title>
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
@@ -18,7 +18,6 @@
     </header>
 
     <section class="profile-section">
-        <h2>Page 1 Content</h2>
         <div class="profile-container">
             <div class="profile-card">
                 <img src="/assets/profile1.jpg" alt="Profile 1">
