--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Luminary</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <title>J-Luminary</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li class="logo"><a href="../index.html">J-Luminary</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="page/profile/profile.html">Profile</a></li>
+                <li class="logo">J-Luminary</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Profile</a></li>
             </ul>
         </nav>
     </header>
-
-    <section class="profile-section">
+    <main class="profile-section">
         <div class="profile-container">
             <div class="profile-card">
-                <img src="/assets/profile1.jpg" alt="Profile 1">
+                <img src="image1.jpg" alt="Profile 1">
                 <h3>Person 1</h3>
                 <p>Description for Person 1 in Page 1.</p>
             </div>
             <div class="profile-card">
-                <img src="/assets/profile2.jpg" alt="Profile 2">
+                <img src="image2.jpg" alt="Profile 2">
                 <h3>Person 2</h3>
                 <p>Description for Person 2 in Page 1.</p>
             </div>
             <div class="profile-card">
-                <img src="/assets/profile3.jpg" alt="Profile 3">
+                <img src="image3.jpg" alt="Profile 3">
                 <h3>Person 3</h3>
                 <p>Description for Person 3 in Page 1.</p>
             </div>
         </div>
-    </section>
-
+    </main>
     <footer>
-        <p>© 2024 J-Luminary. All rights reserved.</p>
+        <p>&copy; 2024 J-Luminary. All rights reserved.</p>
     </footer>
-
-    <script src="/assets/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
