--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li class="logo">J-Luminary</li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="page/profile/profile.html">Profile</a></li>
             </ul>
         </nav>
     </header>
