--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,37 +7,28 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+    <!-- Header -->
+
     <header>
         <nav>
             <ul>
-                <li class="logo">J-Luminary</li>
-                <li><a href="#">About</a></li>
+                <li><a href="../../index.html" >J-Luminary</a></li>
                 <li><a href="page/profile/profile.html">Profile</a></li>
+                <li><a href="page/archive/archive.html">Archive</a></li>
+                <li><a href="page/contact/contact.html">Contact</a></li>
             </ul>
         </nav>
+        <h1>Welcome to My Personal Website</h1>
+        <p>Explore my physics works, projects, and profile.</p>
     </header>
-    <main class="profile-section">
-        <div class="profile-container">
-            <div class="profile-card">
-                <img src="image1.jpg" alt="Profile 1">
-                <h3>Person 1</h3>
-                <p>Description for Person 1 in Page 1.</p>
-            </div>
-            <div class="profile-card">
-                <img src="image2.jpg" alt="Profile 2">
-                <h3>Person 2</h3>
-                <p>Description for Person 2 in Page 1.</p>
-            </div>
-            <div class="profile-card">
-                <img src="image3.jpg" alt="Profile 3">
-                <h3>Person 3</h3>
-                <p>Description for Person 3 in Page 1.</p>
-            </div>
-        </div>
-    </main>
+
+    <!-- Footer -->
+
     <footer>
         <p>&copy; 2024 J-Luminary. All rights reserved.</p>
     </footer>
+
     <script src="assets/script.js"></script>
 </body>
 </html>
