--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="../../index.html" class="nav-item">J-Luminary</a></li>
-                <li><a href="page/profile/profile.html" class="nav-item">Profile</a></li>
-                <li><a href="page/archive/archive.html" class="nav-item">Archive</a></li>
-                <li><a href="page/contact/contact.html" class="nav-item">Contact</a></li>
+                <li><a href="../../index.html" class="nav-item">J-Luminary</a>
+                    <div></div></li>
+                <li><a href="page/profile/profile.html" class="nav-item">Profile</a>
+                    <div></div></li>
+                <li><a href="page/archive/archive.html" class="nav-item">Archive</a>
+                    <div></div></li>
+                <li><a href="page/contact/contact.html" class="nav-item">Contact</a>
+                    <div></div></li>
             </ul>
         </nav>
         <h1>Welcome to My Personal Website</h1>
